# SS_Lab3_c

./: .gitignore  CMakeLists.txt  ListModeLib.c  ListModeLib.java  Main.java  README.md  ScriptModeLib.c  ScriptModeLib.java  com_ifmo_ttaaa_ss_lab3_app_ListModeLib.h  com_ifmo_ttaaa_ss_lab3_app_ScriptModeLib.h  fat32_lib.c  fat32_lib.h  list_mode.c  list_mode.h  script_mode.c  script_mode.h  utils.c  utils.h
